--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.7.1
   qr_code_scanner: ^1.0.1
+  lottie: ^2.3.0
+  flutter_redux: ^0.10.0
+  dio: ^5.0.2
 
 dev_dependencies:
   flutter_test:
