--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   lottie: ^2.3.0
   flutter_redux: ^0.10.0
   dio: ^5.0.2
+  change_app_package_name: ^1.1.0
+  firebase_database: ^10.0.16
 
 dev_dependencies:
   flutter_test:
