--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^5.0.2
   change_app_package_name: ^1.1.0
   firebase_database: ^10.0.16
+  syncfusion_flutter_datagrid: ^21.2.3
 
 dev_dependencies:
   flutter_test:
